fix alignment issues and add a break point in DeployTabs.module.css

--- a/ui/src/components/CodeBlock/CodeBlock.module.css
+++ b/ui/src/components/CodeBlock/CodeBlock.module.css
@@ -1,5 +1,7 @@
 .CodeBlockContainer{
-    width: 91%;
+    width: 100%;
+    max-width: 426px;
+    box-sizing: border-box;
 }
 
 .LightButton{
