--- a/ui/src/pages/Deploy/DeployTabs/DeployTabs.module.css
+++ b/ui/src/pages/Deploy/DeployTabs/DeployTabs.module.css
@@ -57,6 +57,7 @@
     display: flex;
     gap: 10px;
     align-items: center;
+    display: none;
 }
 
 .ButtonClass {
@@ -68,13 +69,25 @@
     justify-items: start;
     align-content: flex-end;
     align-items: flex-start;
-
+    gap: 50px;
 }
 
 .MiniMaxContainer .SubContents:nth-child(2) {
     margin-top: 42px;
+    width: 380;
+    height: 270px;
 }
 
-/* .SubContents{
-    width: 50%;
-} */
+.SubContents{
+    /* width: 50%; */
+}
+
+@media (max-width: 1366px) {
+    .MiniMaxContainer {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .MiniMaxContainer .SubContents:nth-child(2) {
+        margin-top: 0;
+    }
+}
